# coprocessor-playground

./: .example.env  .gitignore  Cargo.toml  README.md  flake.nix  justfile
artifacts/: neutron_strategy_config.toml
artifacts/circuit/: README.md
artifacts/cw/: README.md  valence_storage_account.wasm
artifacts/deploy/: neutron_strategy_config.toml
artifacts/evm/: README.md
circuits/circuit_a/circuit/: Cargo.toml
circuits/circuit_a/circuit/src/: lib.rs
circuits/circuit_a/controller/: Cargo.toml
circuits/circuit_a/controller/src/: lib.rs
circuits/circuit_a/core/: Cargo.toml
circuits/circuit_a/core/src/: consts.rs  lib.rs  proof.rs
circuits/erc20_balance/circuit/: Cargo.toml
circuits/erc20_balance/circuit/src/: lib.rs
circuits/erc20_balance/controller/: Cargo.toml
circuits/erc20_balance/controller/src/: lib.rs
circuits/erc20_balance/core/: Cargo.toml
circuits/erc20_balance/core/src/: consts.rs  lib.rs  proof.rs
circuits/storage_proof/core/src/: consts.rs
common/src/: lib.rs
deploy/: Cargo.toml
deploy/src/: lib.rs
deploy/src/inputs/: input_type.rs  mod.rs  neutron.toml  neutron_code_ids.toml  neutron_inputs.toml
deploy/src/steps/: deploy_coprocessor_app.rs  instantiate_contracts.rs  mod.rs  read_input.rs  register_coprocessor_id.rs  setup_authorizations.rs  write_output.rs
strategist/: Cargo.toml  README.md
strategist/src/: coordinator.rs  lib.rs  main.rs  neutron_config.rs  strategist.rs  strategy.rs
types/: Cargo.toml
types/src/: lib.rs  neutron_cfg.rs
