[workspace]
members = [
    "circuits/circuit_a/circuit",
    "circuits/circuit_a/controller",
    "deploy",
    "strategist/",
    "types",
]
resolver = "2"

[workspace.package]
authors = ["Timewave Labs"]
edition = "2021"
license = "Apache-2.0"
version = "0.4.2"

[workspace.dependencies]
anyhow = { version = "1.0.83", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = [
    "alloc",
] }
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.7", default-features = false }
valence-coprocessor-wasm = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.7", default-features = false }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.207", default-features = false, features = ["derive"] }
async-trait = "0.1.77"
env_logger = "0.10.0"
cosmwasm-std = { version = "2.1.3" }
cosmrs = { version = "0.21.1" }
dotenv = "0.15"
toml = "0.8"
log = { version = "0.4.22" }
multi_log = "0.1.2"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-appender-log = "0.30.0"
valence-authorization-utils = { git = "https://github.com/timewave-computer/valence-protocol", rev = "062a77e" }
valence-processor-utils = { git = "https://github.com/timewave-computer/valence-protocol", rev = "062a77e" }
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", tag = "v1.0.0" }
hex = "0.4.3"
cw20 = "2.0.0"
cw20-base = "2.0.0"
valence-library-utils = { git = "https://github.com/timewave-computer/valence-protocol", rev = "062a77e" }
sp1-sdk = { version = "5.0.0", default-features = false }
bincode = "1.3.3"
