[package]
name = "strategist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
valence-domain-clients = { workspace = true }
valence-strategist-utils = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
types = { path = "../types" }
deploy = { path = "../deploy" }
serde_json = { workspace = true }
cosmwasm-std = { workspace = true }
valence-authorization-utils = { workspace = true }
valence-processor-utils = { workspace = true }
cw20 = { workspace = true }
