[package]
name = "valence-coprocessor-app-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor circuit definition."

[dependencies]
valence-coprocessor.workspace = true
alloy-rpc-types-eth = { version = "0.9.2", default-features = false, features = [
    "serde",
] }
alloy-primitives = { version = "0.8.25", default-features = false }
serde_json = { workspace = true }
