[package]
name = "valence-coprocessor-app-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor controller definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true
alloy-primitives = { version = "0.8.15", default-features = false }
alloy-rpc-types-eth = { version = "0.9.2", default-features = false, features = [
    "serde",
] }
alloy-sol-types = { version = "0.8.15", default-features = false, features = [
    "eip712-serde",
] }
alloy-trie = { version = "0.7.8", default-features = false, features = [
    "ethereum",
    "serde",
] }
bincode = { version = "2.0.1", default-features = false, features = [
    "alloc",
    "serde",
] }
