[package]
name = "valence-coprocessor-app-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor controller definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
bincode.workspace = true

# valence deps
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true

# alloy
alloy-primitives = { version = "0.8.15", default-features = false }
alloy-rpc-types-eth.workspace = true
alloy-sol-types = { version = "0.8.15", default-features = false, features = [
    "eip712-serde",
] }
alloy-trie = { version = "0.7.8", default-features = false, features = [
    "ethereum",
    "serde",
] }
# circuit-a-core.path = "../core"
