[package]
name = "valence-coprocessor-app-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor controller definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
bincode.workspace = true

# circuit-a-core.path = "../core"

# valence deps
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-sol-types = { workspace = true }
alloy-trie = { workspace = true }
