[package]
name = "circuit-a-core"
version = "0.1.0"
edition = "2024"

# todo: think about adding a build.rs which would generate
# the consts file automatically

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-trie = { workspace = true }
alloy-rpc-types-eth = { workspace = true }

serde_json = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
alloy-serde = { workspace = true }
