[package]
name = "erc20-balance-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The Valence co-processor controller definition."

[dependencies]
anyhow.workspace = true
serde_json.workspace = true

erc20-balance-core.path = "../core"

# valence deps
valence-coprocessor.workspace = true
valence-coprocessor-wasm.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
