[package]
name = "erc20-balance-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-trie = { workspace = true }
alloy-rpc-types-eth = { workspace = true }

serde_json = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
alloy-serde = { workspace = true }
